2004-11-16  Vincent Noel  <vnoel@cox.net>

	* logview.c (save_session): Use g_get_prgname for restoring session.

2004-11-09  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_copy): Handle multiple lines selection.
	(logview_select_all): New. Add a "Select All" menu item.
	(logview_menus_set_state): Insensitize "Select All" when monitoring.
	Add a separator before the "Find" menu item.

	* log_repaint.c (handle_selection_changed_cb): Allow the selection
	of multiple log lines.

	* logview.c (logview_copy): Add a "copy" menuitem to copy the
	content of the active log line to the clipboard.

2004-11-05  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: Remove a warning.

	* zoom.c: Move stuff around, make functions static.

	* log_repaint.c: remove log_redrawdetail.

	* config.c: Remove includes.

	* configdata.h: New. Move ConfigData struct here.

	* desc_db.c: Add copyright.	

	* actions.h: New. Move the Action structure here.

	* actions.c: Add copyright.

	* userprefs.h: Move UserPrefsStruct here.

	* logrtns.h: Remove obsolete prototypes.

	* log_repaint.c: Remove global variables.

	* desc_db.c:
	* userprefs.c: 
	* zoom.c: 
	* about.c:
	* calendar.c: 
	* misc.h:
	* logview.h:
	* actions.c:
	* misc.c: Don't always include gnome.h. Use relevant includes.

	* logview.c (logview_help): Adapt.

2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (ReadLogStats): Fix the number of lines in info window.

	* logview.c: Add a separator before "Collapse all" in the view menu.

	* misc.c (IsLeapYear): moved to misc.c

	* logview.c: (parse_syslog): Kill. Not used anymore.
	(destroy): If the opened log is zipped, don't save it in gconf.
	Remove the GNOMELOCALEDIR define from logview.c, it's already in Makefile.am
	(ExitProg): Kill, just call gtk_main_quit.

2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logview.c (destroy): Only save the size and opened log when
	destroying the last window.

	* userprefs.c (prefs_create_defaults): open one of standard logs